# pnp-slab-contact

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: README.txt
scripts/: analyze_run.py  analyze_snapshot_shells.py  commands.sh  compare_cases.py  compare_profiles.py  make_figures.py  make_profiles.py  plot_contact_panels.py  plot_panels_v2.py  plot_sweep_summary.py  plot_sweeps.sh  run_single.py  run_sweep_case.py  summarize_sweeps.py
src/pnpcc/: __init__.py  io.py  nernst_planck.py  params.py  poisson.py  poisson_neumann.py  protocol.py  regions.py  simulate.py
src/pnpcc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
