[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnpcc"
version = "0.1.0"
description = "Poisson–Nernst–Planck contact/separation simulator for soft interfaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "matplotlib>=3.7",
  "ruff",
  "black",
  "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
